# dungeon

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.claude/skills/run-frontend/: SKILL.md
backend/: Dockerfile  config.example.json  package-lock.json  package.json  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/crawlers/: base.py  zhihu.py  zsxq.py
backend/app/plugins/: __init__.py  events.py  runtime.py
backend/app/routers/: auth.py  chat.py  dashboard.py  holdings.py  insight_report.py  mcp.py  plugins.py  professor_index.py  proxy.py  settings.py  sources.py  token_usage.py  topics.py
backend/app/services/: audit.py  embedding.py  holdings_generator.py  hybrid_retriever.py  image_store.py  ingestion.py  insight_report.py  llm_client.py  notify.py  professor_index.py  rag.py  task_manager.py  token_usage.py  tools.py  vectorstore.py
backend/app/utils/: scheduler.py  streaming.py  text.py
backend/scripts/: migrate_zsxq_xml.py  zhihu_data_server.js  zhihu_sign_server.js
deploy/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
deploy/nginx/: default.conf
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.mdx
docs/docs/api/: auth.mdx  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: backfill_articles.py  backfill_digests.py  backfill_images.py  deploy.py  fix_deploy.py  zhihu_crawl_answers.js  zhihu_sign.js
(+80 files in other folders)
