[project]
name = "dungeon-lord"
version = "0.1.0"
description = "财经大V观点分析系统 - 爬虫+RAG问答"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "chromadb>=0.5.0",
    "httpx>=0.28.0",
    "openai>=1.50.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "sse-starlette>=2.0.0",
    "sentence-transformers>=3.0.0",
    "playwright>=1.40.0",
    "python-jose[cryptography]>=3.3.0",
    "rank-bm25>=0.2.2",
    "yfinance>=0.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
